--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-toastify": "^4.1.0",
     "axios": "^1.3.2",
     "better-react-carousel": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.1",
     "sass": "^1.58.0"
   },
   "devDependencies": {
